Refactor: Implement task validation and CRUD operations in TarefaController; add migration for Tarefas table

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=meuBanco; Integrated Security=True;"
+    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=bancoDoDesafio; Integrated Security=True;"
   }
 }
